--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -26,6 +26,7 @@ h1 {
 .section-headline {
   font-size: var(--h2-font-size);
   margin-bottom: var(--section-headline-spacing);
+  text-align: center;
 }
 
 a:link,
